# ZombieSlayer

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: zs-review.md
.claude-plugin/hooks/: hooks.json  scan_image.py  scan_tool_output.py
demo/: CLAUDE.md  README.md
demo/.claude/: settings.json
demo/fixtures/: README.md  buried_injection.html  chatml_tokens.html  clean_article.html  code_fence.html  css_hidden.html  css_opacity.html  exfiltration.html  fake_system_tag.html  fake_transcript_json.html  html_comment.html  index.html  override_ignore.html  persistence.html  role_reassignment.html  zero_width.html
scripts/: adversarial_selftest.py  harness.py
src/zombieslayer/: __init__.py  admin.py  audit.py  behavior.py  detector.py  persistence.py  plugin.py  policy.py  quarantine.py  remediation.py  replay.py  review.py  scanner.py  topology.py  types.py
src/zombieslayer_integrations/: __init__.py  intent_verifier_claude.py
src/zombieslayer_vision/: __init__.py  adversarial.py  cache.py  code_scan.py  extractor.py  format_detect.py  hidden_text.py  metadata.py  policy.py  sanitizer.py  scanner.py  stego.py  types.py
tests/: test_adversarial.py  test_detector.py  test_ensemble.py  test_evasion.py  test_integration.py  test_intent_verifier_integration.py  test_issue2.py  test_memory_poisoning.py  test_plugin.py  test_plugin_hook.py  test_post_mvp.py  test_quarantine_store.py  test_rollback.py
tests/bench/: corpus.py  test_bench.py
