[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zombieslayer"
version = "0.1.0"
description = "Zombie prompt-injection safeguard for Claude-centered agents"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ZombieSlayer" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
intent = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["zombieslayer*", "zombieslayer_integrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
